# lead-scraper

./: README.md  amazon_ads.py  enrich.py  meta_ads.py  requirements.txt  setup.cfg  shopping_ads.py  utils.py
scraper/: __init__.py  cli.py  db.py  google_ads.py  models.py
tests/: test_amazon_ads.py  test_google_ads.py  test_meta_ads.py
