[metadata]
name = lead-scraper
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = Multi-source lead scraper for B2B sales teams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/lead-scraper
project_urls =
    Bug Tracker = https://github.com/yourusername/lead-scraper/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >=3.11
install_requires =
    aiohttp>=3.9.0
    beautifulsoup4>=4.12.0
    playwright>=1.42.0
    pydantic[email]>=2.6.0
    typer[all]>=0.9.0
    rich>=13.7.0
    python-dotenv>=1.0.0

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-asyncio>=0.23.0
    pytest-mock>=3.12.0
    pytest-cov>=4.1.0
    black>=24.0.0
    flake8>=7.0.0
    mypy>=1.9.0
    types-beautifulsoup4
    types-aiofiles

[options.entry_points]
console_scripts =
    lead-scraper = scraper.cli:main

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto
addopts = -v --cov=scraper --cov-report=term-missing

[coverage:run]
source = scraper
omit = 
    */tests/*
    */test_*.py
